@@ -50,11 +50,13 @@
  *  basic USB Audio 1.0 drivers in all modern OSes (i.e. no special drivers
  *  required).
  *
- *  On start-up the system will automatically enumerate and function
- *  as a USB microphone. Incoming audio from the ADC channel 1 will
- *  be sampled and sent to the host computer.
+ *  On start-up the system will automatically enumerate and function as a 
+ *  USB microphone. By default, the demo will produce a square wave test tone
+ *  when the board button is pressed. If USE_TEST_TONE is not defined in the
+ *  project makefile, incoming audio from the ADC channel 1 will be sampled
+ *  and sent to the host computer instead.
  *
- *  To use, connect a microphone to the ADC channel 2.
+ *  When in microphone mode, connect a microphone to the ADC channel 2.
  *
  *  Under Windows, if a driver request dialogue pops up, select the option
  *  to automatically install the appropriate drivers.
@@ -68,6 +70,12 @@
  *    <td><b>Define Name:</b></td>
  *    <td><b>Location:</b></td>
  *    <td><b>Description:</b></td>
+ *   </tr>
+ *   <tr>
+ *    <td>USE_TEST_TONE</td>
+ *    <td>Makefile LUFA_OPTS</td>
+ *    <td>When defined, this alters the demo to produce a square wave test tone when the first board button is pressed
+ *        instead of sampling the board microphone.</td>
  *   </tr>
  *   <tr>
  *    <td>MICROPHONE_BIASED_TO_HALF_RAIL</td>
